# self-optimizing-rag-platform

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt
.github/workflows/: ci.yml
api/app/: __init__.py  auth.py  dependencies.py  health.py  main.py  middleware.py
api/cache/: __init__.py  redis_cache.py
api/config/: __init__.py  settings.py
api/db/: README.md  config.py  init_db.py  requirements.txt  schema.sql  session.py
api/embeddings/: __init__.py  factory.py  interfaces.py  providers.py  schemas.py
api/evaluation/: __init__.py  fixtures.py  metrics.py  ragas_eval.py  schemas.py  service.py  testset.py
data/: smoke_sample.txt
docker/: api.Dockerfile  frontend.Dockerfile  worker.Dockerfile
docs/: api_reference.md  architecture.md  deployment.md  docker_compose_services.md  original_spec_compliance.md  project5_specification.md  project_scope.md  tenant_isolation.md
frontend/: README.md  package-lock.json  package.json  tsconfig.json
hnsw-cpp/: CMakeLists.txt  README.md
hnsw-cpp/benchmarks/: benchmark_hnsw.py
hnsw-cpp/include/: hnsw_index.hpp
hnsw-cpp/src/: bindings.cpp  hnsw_index.cpp
infrastructure/: README.md
ingestion/: README.md  spark_ingest.py
monitoring/: benchmark_results.json  benchmark_results.template.json  mlflow_production_baseline.json  prometheus.yml
scripts/: benchmark_backends.py  generate_demo_testset.py  mlflow_regression_check.py  run_experiment.py  run_worker.py  seed_demo_data.py  start_local.ps1  start_local.sh
tests/: conftest.py
worker/: ingest.py
(+139 files in other folders)
